--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,12 +1,13 @@
-name: Playwright Tests
+name: CI Pipeline
 on:
   push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+
 jobs:
-  test:
-    timeout-minutes: 60
+  unit-tests:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -15,13 +16,70 @@ jobs:
         node-version: lts/*
     - name: Install dependencies
       run: npm ci
+    - name: Run unit tests
+      run: npm test
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v4
+      with:
+        name: unit-test-coverage
+        path: coverage/
+        retention-days: 30
+
+  e2e-tests:
+    name: Run E2E Tests
+    needs: unit-tests  
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: lts/*
+    
+    - name: Install dependencies
+      run: npm ci
+    
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+    
+    - name: Start dev server
+      run: npm run dev &
+      env:
+        PORT: 5176
+        
+    - name: Wait for server
+      run: |
+        for i in {1..10}; do
+          if curl -s http://localhost:5176 >/dev/null; then
+            echo "Server is up!"
+            exit 0
+          fi
+          sleep 3
+        done
+        echo "Server failed to start"
+        exit 1
+    
     - name: Run Playwright tests
       run: npx playwright test
-    - uses: actions/upload-artifact@v4
+      env:
+        BASE_URL: http://localhost:5176
+    
+    - name: Upload Playwright report
+      uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+
+  lint:
+    name: Run Linter
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: lts/*
+    - name: Install dependencies
+      run: npm ci
+    - name: Run ESLint
+      run: npm run lint
