--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -59,9 +59,12 @@ jobs:
         exit 1
     
     - name: Run Playwright tests
-      run: npx playwright test
+      run: npm run test:e2e
       env:
         BASE_URL: http://localhost:5176
+        CI: true 
+        PLAYWRIGHT_TEST_TIMEOUT: 60000
+        PLAYWRIGHT_WORKERS: 2
     
     - name: Upload Playwright report
       uses: actions/upload-artifact@v4
